[gd_scene load_steps=4 format=1]

[ext_resource path="res://account/account.gd" type="Script" id=1]
[ext_resource path="res://account/register.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/comic_bold.fnt" type="BitmapFont" id=3]

[node name="account" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="login" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="account" type="TextEdit" parent="login"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 332.0
margin/top = 214.0
margin/right = 603.0
margin/bottom = 258.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="login/account"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -115.0
margin/top = 16.0
margin/right = -63.0
margin/bottom = 42.0
text = "Account"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="password" type="TextEdit" parent="login"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 332.0
margin/top = 280.0
margin/right = 603.0
margin/bottom = 324.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="login/password"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -115.0
margin/top = 16.0
margin/right = -63.0
margin/bottom = 42.0
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="login" type="Button" parent="login"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 474.0
margin/top = 342.0
margin/right = 601.0
margin/bottom = 387.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Login"
flat = false

[node name="register" type="Button" parent="login"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 336.0
margin/top = 341.0
margin/right = 454.0
margin/bottom = 388.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Register"
flat = false

[node name="info" type="Label" parent="login"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 289.0
margin/top = 118.0
margin/right = 615.0
margin/bottom = 180.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close" type="Button" parent="login"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 43.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="register" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )

[node name="bg" type="TextureFrame" parent="register"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 602.0
stretch_mode = 0

[node name="account" type="LineEdit" parent="register"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 379.0
margin/top = 203.0
margin/right = 636.0
margin/bottom = 248.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="register/account"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -80.0
margin/top = 15.0
margin/right = -17.0
margin/bottom = 39.0
text = "email"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="password" type="LineEdit" parent="register"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 382.0
margin/top = 270.0
margin/right = 632.0
margin/bottom = 315.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="register/password"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -80.0
margin/top = 15.0
margin/right = -17.0
margin/bottom = 39.0
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="password_confirm" type="LineEdit" parent="register"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 382.0
margin/top = 336.0
margin/right = 632.0
margin/bottom = 381.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="register/password_confirm"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -80.0
margin/top = 15.0
margin/right = -17.0
margin/bottom = 39.0
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="register" type="Button" parent="register"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 517.0
margin/top = 400.0
margin/right = 634.0
margin/bottom = 443.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "register"
flat = false

[node name="return_login" type="Button" parent="register"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 385.0
margin/top = 399.0
margin/right = 498.0
margin/bottom = 442.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "login"
flat = false

[node name="info" type="Label" parent="register"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 102.0
margin/right = 804.0
margin/bottom = 190.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.808594, 0.152302, 0.120026, 1 )
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="account_info" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="email" type="LineEdit" parent="account_info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 173.0
margin/top = 126.0
margin/right = 499.0
margin/bottom = 193.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="email" type="Label" parent="account_info/email"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -120.0
margin/top = 6.0
margin/right = -20.0
margin/bottom = 53.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Confirm" type="Button" parent="account_info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 299.0
margin/top = 452.0
margin/right = 468.0
margin/bottom = 517.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Confirm"
flat = false

[connection signal="pressed" from="login/login" to="." method="_on_login_pressed"]

[connection signal="pressed" from="login/register" to="." method="_on_register_pressed"]

[connection signal="pressed" from="login/close" to="." method="_on_close_pressed"]

[connection signal="pressed" from="register/register" to="register" method="_on_register_pressed"]

[connection signal="pressed" from="register/return_login" to="." method="_on_return_login_pressed"]


